# Threedeploy

./: .gitignore  .gitlab-ci.yml  3d-ploy.py  CHANGELOG.md  README.MD  README.md  logging.yaml  requirements.txt  setup.cfg  setup.py  thingideploy.py
src/: thingideploy.py
threedeploy/: __main__.py  threedeploy.py
