[metadata]
name = threedeploy
version = 1.1.0
author = chrismettal
author_email = chrismettal@binary-6.de
description = Automatically deploy your 3d projects to multiple sites like Prusaprinters, Thangs, or even Thingiverse!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/chrismettal/threedeploy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = threedeploy
python_requires = >=3.6
install_requires =
    DateTime~=4.3
    requests~=2.32.3
    pyyaml~=6.0.2

[options.packages.find]
where = threedeploy

[options.entry_points]
console_scripts =
    threedeploy=threedeploy.__main__:main